move spacing fix to the navbar instead of hero section

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,7 +17,6 @@ $hero-bp-vert: 1150px;
 
   @media (max-width: $hero-bp-1) {
     height: 55vw;
-    padding-top: 2.5rem;
   }
 
   @media (min-width: $hero-bp-vert) {
